--- a/Marinduque.mw
+++ b/Marinduque.mw
@@ -5,7 +5,7 @@
 Say '''Marinduque''' et kumapat ya klase luyag na [[Mimaropa]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 234,521 totoo. <br>
 Walay kabaleg tan sukat to ya  952.58 kilometro kuwadrado. Say dialling code to et 42. Say kapital to et Boac.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 ==Saray baley==
 
