--- a/Masbate.mw
+++ b/Masbate.mw
@@ -5,7 +5,7 @@
 Say '''Masbate''' et unaan ya klase luyag na [[Bicol Region]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 892,393 totoo. <br>
 Walay kabaleg tan sukat to ya  4,151.78 kilometro kuwadrado. Say dialling code to et 56. Say kapital to et Siyudad na Masbate.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 == Saray siyudad san baley ==
 Say Masbate walay 1 ya siyudad san 20 ya baley.
