--- a/Misamis_Occidental.mw
+++ b/Misamis_Occidental.mw
@@ -7,4 +7,4 @@ Walay kabaleg tan sukat to ya  2,055.22 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
