--- a/Misamis_Oriental.mw
+++ b/Misamis_Oriental.mw
@@ -9,4 +9,4 @@ Walay kabaleg tan sukat to ya  3,544.32 kilometro kuwadrado. Say dialling code t
 {{Filipinas}}
 
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
