--- a/Mountain_Province.mw
+++ b/Mountain_Province.mw
@@ -30,4 +30,4 @@ Say Luyag na Palandey walay 10 ya baley.
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
