--- a/Negros_Occidental.mw
+++ b/Negros_Occidental.mw
@@ -5,7 +5,7 @@
 Say '''Negros Occidental''' ([[salitan Pangasinan]]: '''Negros ed Sagor''') et unaan ya klase luyag na [[Western Visayas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 2,497,261 totoo. <br>
 Walay kabaleg tan sukat to ya  7,965.21 kilometro kuwadrado. Say dialling code to et 34. Say kapital to et Bacolod.  
         
-[[Category: Saray luyag na Pilipinas]]   
+[[Category:Saray luyag na Filipinas]]   
 
 ==Heyografiya==
 
