--- a/Negros_Oriental.mw
+++ b/Negros_Oriental.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya  5,385.53 kilometro kuwadrado. Say dialling code t
 
 {{Visayas lateral}}
    
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
