--- a/Northern_Samar.mw
+++ b/Northern_Samar.mw
@@ -6,4 +6,4 @@ Walay kabaleg tan sukat to ya  3,692.93 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
