--- a/Nueva_Ecija.mw
+++ b/Nueva_Ecija.mw
@@ -5,7 +5,7 @@
 Say '''Nueva Ecija''' ([[salitan Pangasinan]]: '''Balon Ecija''') et unaan ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 2,151,461 totoo. <br>
 Walay kabaleg tan sukat to ya  5,751.33 kilometro kuwadrado. Say dialling code to et 44. Say kapital to et Palayan.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray too diad Balon Écija==
 * [[Annalyn Garcia IV]]
