--- a/Nueva_Vizcaya.mw
+++ b/Nueva_Vizcaya.mw
@@ -5,7 +5,7 @@
 Say '''Nueva Vizcaya''' ([[salitan Pangasinan]]: '''Balon Vizcaya''') et kumadwa ya klase luyag na [[Cagayan Valley]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 452,287 totoo. <br>
 Walay kabaleg tan sukat to ya  3,975.67 kilometro kuwadrado. Say dialling code to et 78. Say kapital to et Bayombong.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 ==Saray baley==
 
