--- a/Oriental_Mindoro.mw
+++ b/Oriental_Mindoro.mw
@@ -5,7 +5,7 @@
 Say '''Oriental Mindoro''' ([[salitan Pangasinan]]]: '''Mindoro ed Bokig''') et unaan ya klase luyag na [[Mimaropa]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 785,602 totoo. <br>
 Walay kabaleg tan sukat to ya  4,238.38 kilometro kuwadrado. Say dialling code to et 43. Say kapital to et Calapan.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 == Saray siyudad san baley ==
 Say Mindoro ed Bokig walay 1 ya siyudad san 14 ya baley.
