--- a/Palawan.mw
+++ b/Palawan.mw
@@ -3,4 +3,4 @@
 Say '''Palawan''' et unaan ya klase luyag na [[Mimaropa]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 771,667 totoo. <br>
 Walay kabaleg tan sukat to ya  17,030.75 kilometro kuwadrado. Say dialling code to et 48. Say kapital to et Puerto Princesa.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
