--- a/Pampanga.mw
+++ b/Pampanga.mw
@@ -5,7 +5,7 @@
 Say '''Pampanga''' et unaan ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 2,198,110 totoo. <br>
 Walay kabaleg tan sukat to ya  2,062.47 kilometro kuwadrado. Say dialling code to et 45. Say kapital to et San Fernando.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 == Saray siyudad san baley ==
 Say Pampanga walay 2 ya siyudad san 20 ya baley.
