--- a/Pangasinan.mw
+++ b/Pangasinan.mw
@@ -216,4 +216,4 @@ Say Nuestra Señora de Manaoag. Papanisiyaan ya makapampaabig ya sakit tan makat
 
 {{Luzon lateral}}
 
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
