--- a/Quezon.mw
+++ b/Quezon.mw
@@ -5,7 +5,7 @@
 Say '''Quezon''' et unaan ya klase luyag na [[Calabarzon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,740,638 totoo. <br>
 Walay kabaleg tan sukat to ya  9,069.60 kilometro kuwadrado. Say dialling code to et 42. Say kapital to et Lucena.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Siyudad tan Baley==
 {| class="wikitable" style="text-align:center;
