--- a/Quirino.mw
+++ b/Quirino.mw
@@ -5,7 +5,7 @@
 Say '''Quirino''' et kumatlo ya klase luyag na [[Cagayan Valley]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 188,991 totoo. <br>
 Walay kabaleg tan sukat to ya  2,323.47 kilometro kuwadrado. Say dialling code to et 78. Say kapital to et Cabarroguis.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray baley==
 
