--- a/Rizal.mw
+++ b/Rizal.mw
@@ -5,7 +5,7 @@
 Say '''Rizal''' et unaan ya klase luyag na [[Calabarzon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 2,484,840 totoo. <br>
 Walay kabaleg tan sukat to ya  1,191.94 kilometro kuwadrado. Say dialling code to et 2. Say kapital to et Antipolo.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 Ragay ed sigud diad luyag na Rizal, nengnengen ed pambansang bayani ni [[José Rizal]] (sigud ed baley: [[Caloocan City|Kalookan]], [[Las Piñas City|Las Piñas]], [[Malabon City|Malabon]], [[Makati City|Makati]], [[Siyudad na Mandaluyong|Mandaluyong]], [[Marikina City|Marikina]], [[Muntinlupa City|Muntinlupa]], [[Navotas, Metro Manila|Nabutas]], [[Parañaque City|Parañaque]], [[Siyudad na Pasay|Pasay]], [[Siyudad na Pasig|Pásig]], [[Pateros]], [[Quezon City|Quezon]], [[San Juan, Metro Manila|San Juan]] tan [[Taguig City|Taguig]]). Soy diad ron siyudad kada agew!
 
