--- a/Romblon.mw
+++ b/Romblon.mw
@@ -5,7 +5,7 @@
 Say '''Romblon''' et kumatlo ya klase luyag na [[Mimaropa]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 283,930 totoo. <br>
 Walay kabaleg tan sukat to ya  1,533.45 kilometro kuwadrado. Say dialling code to et 42. Say kapital to et Romblon.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Saray baley==
 
