--- a/Samar.mw
+++ b/Samar.mw
@@ -5,7 +5,7 @@
 Say '''Samar''' et unaan ya klase luyag na [[Eastern Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 733,377 totoo. <br>
 Walay kabaleg tan sukat to ya  6,048.03 kilometro kuwadrado. Say dialling code to et 55. Say kapital to et Catbalogan.  
         
-[[Category: Saray luyag na Pilipinas]]    
+[[Category:Saray luyag na Filipinas]]    
 
 
 
