--- a/Sarangani.mw
+++ b/Sarangani.mw
@@ -5,4 +5,4 @@
 Say '''Sarangani''' et kumadwa ya klase luyag na [[Soccsksargen]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 498,904 totoo. <br>
 Walay kabaleg tan sukat to ya  3,601.25 kilometro kuwadrado. Say dialling code to et 83. Say kapital to et Alabel.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
