--- a/Siquijor.mw
+++ b/Siquijor.mw
@@ -5,4 +5,4 @@
 Say '''Siquijor''' et kumalima ya klase luyag na [[Central Visayas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 91,066 totoo. <br>
 Walay kabaleg tan sukat to ya  337.49 kilometro kuwadrado. Say dialling code to et 35. Say kapital to et Siquijor.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
