--- a/Sorsogon.mw
+++ b/Sorsogon.mw
@@ -5,7 +5,7 @@
 Say '''Sorsogon''' et kumadwa ya klase luyag na [[Bicol Region]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 792,949 totoo. <br>
 Walay kabaleg tan sukat to ya  2,119.01 kilometro kuwadrado. Say dialling code to et 56. Say kapital to et Siyudad na Sorsogon.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 ==Image==
 [[image:SorsogonProvinceDetail.png|centre|250px]]
