--- a/South_Cotabato.mw
+++ b/South_Cotabato.mw
@@ -9,4 +9,4 @@ Walay kabaleg tan sukat to ya  4,428.81 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
