--- a/Sultan_Kudarat.mw
+++ b/Sultan_Kudarat.mw
@@ -5,4 +5,4 @@
 Say '''Sultan Kudarat''' et unaan ya klase luyag na [[Soccsksargen]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 747,087 totoo. <br>
 Walay kabaleg tan sukat to ya  5,298.34 kilometro kuwadrado. Say dialling code to et 64. Say kapital to et Isulan.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
