--- a/Sulu.mw
+++ b/Sulu.mw
@@ -5,7 +5,7 @@
 Say '''Sulu''' et kumadwa ya klase luyag na [[Autonomous Region in Muslim Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 718,290 totoo. <br>
 Walay kabaleg tan sukat to ya  1,600.40 kilometro kuwadrado. Say dialling code to et 68. Say kapital to et Jolo.  
         
-[[Category: Saray luyag na Pilipinas]] 
+[[Category:Saray luyag na Filipinas]] 
 
 ==Baley==
 [[Image:Ph fil sulu.png|center|thumb|500px|Mapa na Sulu, Filipinas]]
