--- a/Surigao_del_Norte.mw
+++ b/Surigao_del_Norte.mw
@@ -5,7 +5,7 @@
 Say '''Surigao del Norte''' et kumadwa ya klase luyag na [[Caraga]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 442,588 totoo. <br>
 Walay kabaleg tan sukat to ya  1,972.93 kilometro kuwadrado. Say dialling code to et 86. Say kapital to et Siyudad na Surigao.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 ==Hiyograpiko==
 
 Say Surigao ed Baybay walay 20 ya baley (ragay ed siyudad [[Surigao]]):
