--- a/Tarlac.mw
+++ b/Tarlac.mw
@@ -5,7 +5,7 @@
 Say '''Tarlac''' et unaan ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 1,366,027 totoo. <br>
 Walay kabaleg tan sukat to ya  3,053.60 kilometro kuwadrado. Say dialling code to et 45. Say kapital to et Siyudad na Tarlac.  
         
-[[Category: Saray luyag na Pilipinas]]  
+[[Category:Saray luyag na Filipinas]]  
 
 == Saray siyudad san baley ==
 Say Tarlac walay 1 ya siyudad san 17 ya baley.
