--- a/Tawi-Tawi.mw
+++ b/Tawi-Tawi.mw
@@ -5,4 +5,4 @@
 Say '''Tawi-Tawi''' et kumatlo ya klase luyag na [[Autonomous Region in Muslim Mindanao]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 366,550 totoo. <br>
 Walay kabaleg tan sukat to ya  1,087.40 kilometro kuwadrado. Say dialling code to et 68. Say kapital to et Bongao.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
