--- a/Zambales.mw
+++ b/Zambales.mw
@@ -5,7 +5,7 @@
 Say '''Zambales''' et kumadwa ya klase luyag na [[Central Luzon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 590,848 totoo. <br>
 Walay kabaleg tan sukat to ya  3,830.83 kilometro kuwadrado. Say dialling code to et 47. Say kapital to et Iba.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
 
 == Baley ==
 <table border="0"><tr>
