--- a/Zamboanga_del_Norte.mw
+++ b/Zamboanga_del_Norte.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya  7,301.00 kilometro kuwadrado. Say dialling code t
 
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
