--- a/Zamboanga_del_Sur.mw
+++ b/Zamboanga_del_Sur.mw
@@ -8,4 +8,4 @@ Walay kabaleg tan sukat to ya  5,914.16 kilometro kuwadrado. Say dialling code t
 {{Zamboanga del Sur}}
 {{Filipinas}}
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
