--- a/Zamboanga_Sibugay.mw
+++ b/Zamboanga_Sibugay.mw
@@ -5,4 +5,4 @@
 Say '''Zamboanga Sibugay''' et kumadwa ya klase luyag na [[Zamboanga Peninsula]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 584,685 totoo. <br>
 Walay kabaleg tan sukat to ya  3,607.75 kilometro kuwadrado. Say dialling code to et 62. Say kapital to et Ipil.  
         
-[[Category: Saray luyag na Pilipinas]]
+[[Category:Saray luyag na Filipinas]]
