--- a/Template:Leyte.mw
+++ b/Template:Leyte.mw
@@ -51,5 +51,5 @@
 * [[Ormoc]] 
 * [[Tacloban]]
 }}<noinclude>
-[[Category:Saray baley na Leyte|Saray baley na Leyte]]
+[[Category:Saray baley na Leyte| ]]
 </noinclude>
