--- a/Template:Ilocos_Sur.mw
+++ b/Template:Ilocos_Sur.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Ilocos Sur
-|title = Saray [[Siyudad]] san [[Baley]] na [[Ilocos Sur|Ilocos ed Abalaten]] (Ilocos Sur)
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Ilocos Sur]] 
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -42,3 +42,5 @@
 * [[Candon]]
 * [[Vigan]]
 }}<noinclude>
+[[Category:Saray baley na Ilocos Sur| ]]
+</noinclude>
