--- a/Template:Ilocos_Norte.mw
+++ b/Template:Ilocos_Norte.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Ilocos Norte
-|title = Saray [[Siyudad]] san [[Baley]] na [[Ilocos Norte|Ilocos ed Baybay]] (Ilocos Norte)
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Ilocos Norte]] 
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -33,3 +33,5 @@
 * [[Laoag]]
 
 }}<noinclude>
+[[Category:Saray baley na Ilocos Norte| ]]
+</noinclude>
