--- a/Template:Abra.mw
+++ b/Template:Abra.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Abra
-|title = Saray [[Baley]] na [[Abra|Abra]]
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Abra|Abra]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |image = 
@@ -35,3 +35,5 @@
 * [[Villaviciosa, Abra|Villaviciosa]]
 
 }}<noinclude>
+[[Category:Saray baley na Abra| ]]
+</noinclude>
