--- a/Template:Agusan_del_Norte.mw
+++ b/Template:Agusan_del_Norte.mw
@@ -1,15 +1,25 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray Siyudad na Filipinas|Siyudad]] san [[Saray baley na Filipinas|Baley]] na [[Agusan ed Baybay|Agusan ed Baybay]] ([[Agusan ed Baybay|Agusan del Norte]])'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Cabadbaran|Cabadbaran]] 
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad ya Independiente:''' 
-|style="padding:0px 5px" | [[Siyudad na Butuan|Butuan]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Buenavista, Agusan ed Baybay|Buenavista]] | [[Carmen, Agusan ed Baybay|Carmen]] | [[Jabonga, Agusan ed Baybay|Jabonga]] | [[Kitcharao, Agusan ed Baybay|Kitcharao]] | [[Las Nieves, Agusan ed Baybay|Las Nieves]] | [[Magallanes, Agusan ed Baybay|Magallanes]] | [[Nasipit, Agusan ed Baybay|Nasipit]] | [[Remedios T. Romualdez, Agusan ed Baybay|Remedios T. Romualdez]] | [[Santiago, Agusan ed Baybay|Santiago]] | [[Tubay, Agusan ed Baybay|Tubay]]
-|}
-</div>
+{{Navbox
+|image = 
+|name = Agusan del Norte
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Agusan del Norte]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Buenavista, Agusan del Norte|Buenavista]]
+* [[Carmen, Agusan del Norte|Carmen]]
+* [[Jabonga, Agusan del Norte|Jabonga]]
+* [[Kitcharao, Agusan del Norte|Kitcharao]]
+* [[Las Nieves, Agusan del Norte|Las Nieves]]
+* [[Magallanes, Agusan del Norte|Magallanes]]
+* [[Nasipit, Agusan del Norte|Nasipit]]
+* [[Remedios T. Romualdez, Agusan del Norte|Remedios T. Romualdez]]
+* [[Santiago, Agusan del Norte|Santiago]]
+* [[Tubay, Agusan del Norte|Tubay]]
+|group2 = Saray siudad
+|list2 = 
+* [[Cabadbaran]]
+* [[Butuan]] 
+}}<noinclude>
+[[Category:Saray baley na Agusan del Norte| ]]
+</noinclude>
