--- a/Template:Aklan.mw
+++ b/Template:Aklan.mw
@@ -1,8 +1,28 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Baley na Filipinas|Baley]] na [[Aklan|Aklan]]'''
-|-
-|style="padding:0px 5px"; align="center" | [[Altavas, Aklan|Altavas]] | [[Balete, Aklan|Balete]] | [[Banga, Aklan|Banga]] | [[Batan, Aklan|Batan]] | [[Buruanga, Aklan|Buruanga]] | [[Ibajay, Aklan|Ibajay]] | [[Kalibo, Aklan|Kalibo]] | [[Lezo, Aklan|Lezo]] | [[Libacao, Aklan|Libacao]] | [[Madalag, Aklan|Madalag]] | [[Makato, Aklan|Makato]] | [[Malay, Aklan|Malay]] | [[Malinao, Aklan|Malinao]] | [[Nabas, Aklan|Nabas]] | [[New Washington, Aklan|New Washington]] | [[Numancia, Aklan|Numancia]] | [[Tangalan, Aklan|Tangalan]]
-|}
-</div>
+{{Navbox
+|name = Aklan
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Aklan]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Altavas, Aklan|Altavas]]
+* [[Balete, Aklan|Balete]]
+* [[Banga, Aklan|Banga]]
+* [[Batan, Aklan|Batan]]
+* [[Buruanga, Aklan|Buruanga]]
+* [[Ibajay, Aklan|Ibajay]]
+* [[Kalibo, Aklan|Kalibo]]
+* [[Lezo, Aklan|Lezo]]
+* [[Libacao, Aklan|Libacao]]
+* [[Madalag, Aklan|Madalag]]
+* [[Makato, Aklan|Makato]]
+* [[Malay, Aklan|Malay]]
+* [[Malinao, Aklan|Malinao]]
+* [[Nabas, Aklan|Nabas]]
+* [[New Washington, Aklan|New&nbsp;Washington]]
+* [[Numancia, Aklan|Numancia]]
+* [[Tangalan, Aklan|Tangalan]]
+}}<noinclude>
+[[Category:Saray baley na Aklan| ]]
+</noinclude>
