--- a/Template:Aurora.mw
+++ b/Template:Aurora.mw
@@ -1,8 +1,19 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Baley]] na [[Aurora (luyag)|Aurora]]'''
-|-
-|style="padding:0px 5px"; align="center"  | [[Baler, Aurora|Baler]] | [[Casiguran, Aurora|Casiguran]] | [[Dilasag, Aurora|Dilasag]] | [[Dinalungan, Aurora|Dinalungan]] | [[Dingalan, Aurora|Dingalan]] | [[Dipaculao, Aurora|Dipaculao]] | [[Maria Aurora, Aurora|Maria Aurora]] | [[San Luis, Aurora|San Luis]]
-|}
-</div>
+{{Navbox
+|name = Aurora
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Aurora]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Baler, Aurora|Baler]]
+* [[Casiguran, Aurora|Casiguran]]
+* [[Dilasag, Aurora|Dilasag]]
+* [[Dinalungan, Aurora|Dinalungan]]
+* [[Dingalan, Aurora|Dingalan]]
+* [[Dipaculao, Aurora|Dipaculao]]
+* [[Maria Aurora, Aurora|Maria Aurora]]
+* [[San Luis, Aurora|San Luis]]
+}}<noinclude>
+[[Category:Saray baley na Aurora| ]]
+</noinclude>
