--- a/Template:Basilan.mw
+++ b/Template:Basilan.mw
@@ -1,12 +1,25 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[siyudad]] tan [[baley]] na [[Basilan]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray siyudad:''' 
-|style="padding:0px 5px" | [[Isabella (Basilan)|Isabella]] | [[Lamitan]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Akbar (Basilan)|Akbar]] | [[Al-Barka]] | [[Hadji Mohammad Ajul]] | [[Hadji Muhtamad]] | [[Lantawan]] | [[Maruso]] | [[Sumisip]] | [[Tabuan-Lasa]] | [[Tipo-Tipo]] | [[Tuburan]] | [[Ungkaya Pukan]] |
-|}
-</div>
+{{Navbox
+|name = Basilan
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Basilan]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Akbar, Basilan|Akbar]]
+* [[Al-Barka, Basilan|Al-Barka]]
+* [[Hadji Mohammad Ajul, Basilan|Hadji Mohammad Ajul]]
+* [[Hadji Muhtamad, Basilan|Hadji Muhtamad]]
+* [[Lantawan, Basilan|Lantawan]]
+* [[Maluso, Basilan|Maluso]]
+* [[Sumisip, Basilan|Sumisip]]
+* [[Tabuan-Lasa, Basilan|Tabuan-Lasa]]
+* [[Tipo-Tipo, Basilan|Tipo-Tipo]]
+* [[Tuburan, Basilan|Tuburan]]
+* [[Ungkaya Pukan, Basilan|Ungkaya Pukan]]
+|group3 = Saray siyudad
+|list3 = 
+* [[Siyudad na Isabela|Isabela]] 
+*[[Lamitan]]
+}}<noinclude>
+[[Category:Saray baley na Basilan| ]]
+</noinclude>
