--- a/Template:Leyte.mw
+++ b/Template:Leyte.mw
@@ -45,7 +45,7 @@
 * [[Tolosa, Leyte|Tolosa]]
 * [[Tunga, Leyte|Tunga]]
 * [[Villaba, Leyte|Villaba]]
-|group2 = Saray siudad
+|group2 = Saray siyudad
 |list2 = 
 * [[Baybay]]
 * [[Ormoc]] 
