--- a/Template:Agusan_del_Norte.mw
+++ b/Template:Agusan_del_Norte.mw
@@ -16,7 +16,7 @@
 * [[Remedios T. Romualdez, Agusan del Norte|Remedios T. Romualdez]]
 * [[Santiago, Agusan del Norte|Santiago]]
 * [[Tubay, Agusan del Norte|Tubay]]
-|group2 = Saray siudad
+|group2 = Saray siyudad
 |list2 = 
 * [[Cabadbaran]]
 * [[Butuan]] 
