--- a/Template:Agusan_del_Sur.mw
+++ b/Template:Agusan_del_Sur.mw
@@ -19,7 +19,7 @@
 * [[Talacogon, Agusan del Sur|Talacogon]]
 * [[Trento, Agusan del Sur|Trento]]
 * [[Veruela, Agusan del Sur|Veruela]]
-|group2 = Siudad
+|group2 = Siyudad
 |list2 =
 * [[Bayugan]]
 }}<noinclude>
