--- a/Template:Albay.mw
+++ b/Template:Albay.mw
@@ -21,7 +21,7 @@
 * [[Rapu-Rapu, Albay|Rapu-Rapu]]
 * [[Santo Domingo, Albay|Santo Domingo]]
 * [[Tiwi, Albay|Tiwi]]
-|group2 = Saray siudad
+|group2 = Saray siyudad
 |list2 = 
 * [[Legazpi, Albay|Legazpi]]
 * [[Ligao]]
