--- a/Template:Bataan.mw
+++ b/Template:Bataan.mw
@@ -1,12 +1,25 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Bataan]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Balanga]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Abucay, Bataan|Abucay]] | [[Bagac, Bataan|Bagac]] | [[Dinalupihan, Bataan|Dinalupihan]] | [[Hermosa, Bataan|Hermosa]] | [[Limay, Bataan|Limay]] | [[Mariveles, Bataan|Mariveles]] | [[Morong, Bataan|Morong]] | [[Orani, Bataan|Orani]] | [[Orion, Bataan|Orion]] | [[Pilar, Bataan|Pilar]] | [[Samal, Bataan|Samal]] |
-|}
-</div>
+{{Navbox
+|name = Bataan
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Bataan]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Abucay, Bataan|Abucay]]
+* [[Bagac, Bataan|Bagac]]
+* [[Dinalupihan, Bataan|Dinalupihan]]
+* [[Hermosa, Bataan|Hermosa]]
+* [[Limay, Bataan|Limay]]
+* [[Mariveles, Bataan|Mariveles]]
+* [[Morong, Bataan|Morong]]
+* [[Orani, Bataan|Orani]]
+* [[Orion, Bataan|Orion]]
+* [[Pilar, Bataan|Pilar]]
+* [[Samal, Bataan|Samal]]
+|group3 = Siyudad
+|list3 = 
+* [[Balanga]]
+}}<noinclude>
+[[Category:Saray baley na Bataan| ]]
+</noinclude>
