--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -1,12 +1,47 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Batangas]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Batangas|Batangas]] | [[Siyudad na Lipa|Lipa]] | [[Siyudad na Tanauan|Tanauan]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Agoncillo]] | [[Alitagtag]] | [[Balayan]] | [[Balete (Batangas)|Balete]] |  [[Bauan]] | [[Calaca]] | [[Calatagan]] | [[Cuenca, Filipinas|Cuenca]] | [[Ibaán]] | [[Laurel (Batangas)|Laurel]] | [[Lemery (Batangas)|Lemery]] | [[Lian]] | [[Lobo, Filipinas|Lobo]] | [[Mabini (Batangas)|Mabini]] | [[Malvar]] | [[Rosario (Batangas)|Márquez]] | [[Mataas na Kahoy]] | [[Nazugbu]] | [[Padre Garcia]] | [[San José (Batangas)|San José]] | [[San Juan (Batangas)|San Juan]] | [[San Luis (Batangas)|San Luis]] | [[San Nikolas (Batangas)|San Nikolas]] | [[San Pascual (Batangas)|San Pascual]] | [[Santa Teresita (Batangas)|Santa Teresita]] | [[Santo Tomas (Batangas)|Santo Tomas]] | [[Taal]] | [[Talisay (Batangas)|Talisay]] | [[Taysan]] | [[Isla ed Tingloy|Tingloy]] | [[Tuy]] 
-|}
-</div>
+{{Navbox
+|name = Batangas
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Batangas]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Agoncillo, Batangas|Agoncillo]]
+* [[Alitagtag]]
+* [[Balayan]]
+* [[Balete, Batangas|Balete]]
+* [[Bauan, Batangas|Bauan]]
+* [[Calaca, Batangas|Calaca]]
+* [[Calatagan]]
+* [[Cuenca, Batangas|Cuenca]]
+* [[Ibaan, Batangas|Ibaan]]
+* [[Laurel, Batangas|Laurel]]
+* [[Lemery, Batangas|Lemery]]
+* [[Lian, Batangas|Lian]]
+* [[Lobo, Batangas|Lobo]]
+* [[Mabini, Batangas|Mabini]]
+* [[Malvar]]
+* [[Mataasnakahoy]]
+* [[Nasugbu, Batangas|Nasugbu]]
+* [[Padre Garcia]]
+* [[Rosario, Batangas|Rosario]]
+* [[San Jose, Batangas|San Jose]]
+* [[San Juan, Batangas|San Juan]]
+* [[San Luis, Batangas|San Luis]]
+* [[San Nicolas, Batangas|San Nicolas]]
+* [[San Pascual, Batangas|San Pascual]]
+* [[Santa Teresita, Batangas|Santa Teresita]]
+* [[Santo Tomas, Batangas|Santo Tomas]]
+* [[Taal, Batangas|Taal]]
+* [[Talisay, Batangas|Talisay]]
+* [[Taysan]]
+* [[Tingloy, Batangas|Tingloy]]
+* [[Tuy, Batangas|Tuy]]
+|group3 = Saray siyudad
+|list3 = 
+* [[Siyudad na Batangas|Batangas]]
+* [[Lipa]]
+* [[Tanauan]]
+}}<noinclude>
+[[Category:Saray baley na Batangas| ]]
+</noinclude>
