--- a/Template:Benguet.mw
+++ b/Template:Benguet.mw
@@ -1,12 +1,29 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Benguet]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Baguio|Baguio]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Atok, Benguet|Atok]] | [[Bakun, Benguet|Bakun]] | [[Bokod, Benguet|Bokod]] | [[Buguias, Benguet|Buguias]] | [[Itogon, Benguet|Itogon]] | [[Kabayan, Benguet|Kabayan]] | [[Kapangan, Benguet|Kapangan]] | [[Kibungan, Benguet|Kibungan]] | [[La Trinidad, Benguet|La Trinidad]] | [[Mankayan, Benguet|Mankayan]] | [[Sablan, Benguet|Sablan]] | [[Tuba, Benguet|Tuba]] | [[Tublay, Benguet|Tublay]] 
-|}
-</div>
+{{Navbox
+|name = Benguet
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Benguet]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Atok, Benguet|Atok]]
+* [[Bakun, Benguet|Bakun]]
+* [[Bokod, Benguet|Bokod]]
+* [[Buguias, Benguet|Buguias]]
+* [[Itogon, Benguet|Itogon]]
+* [[Kabayan, Benguet|Kabayan]]
+* [[Kapangan, Benguet|Kapangan]]
+* [[Kibungan, Benguet|Kibungan]]
+* [[La Trinidad, Benguet|La Trinidad]]
+* [[Mankayan, Benguet|Mankayan]]
+* [[Sablan, Benguet|Sablan]]
+* [[Tuba, Benguet|Tuba]]
+* [[Tublay, Benguet|Tublay]]
+
+|group2 = Siyudad
+|list2 = 
+* [[Baguio]] 
+
+}}<noinclude>
+[[Category:Saray baley na Benguet| ]]
+</noinclude>
