--- a/Template:Bohol.mw
+++ b/Template:Bohol.mw
@@ -1,12 +1,62 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad na Filipinas|Siyudad]] tan [[Baley na Filipinas|Baley]] na [[Bohol|Bohol]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Tagbilaran]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Alburquerque, Bohol|Alburquerque]] | [[Alicia, Bohol|Alicia]] | [[Anda, Bohol|Anda]] | [[Antequera, Bohol|Antequera]] | [[Baclayon, Bohol|Baclayon]] | [[Balilihan, Bohol|Balilihan]] | [[Batuan, Bohol|Batuan]] | [[Bien Unido, Bohol|Bien Unido]] | [[Bilar, Bohol|Bilar]] | [[Buenavista, Bohol|Buenavista]] | [[Calape, Bohol|Calape]] | [[Candijay, Bohol|Candijay]] | [[Carmen, Bohol|Carmen]] | [[Catigbian, Bohol|Catigbian]] | [[Clarin, Bohol|Clarin]] | [[Corella, Bohol|Corella]] | [[Cortes, Bohol|Cortes]] | [[Dagohoy, Bohol|Dagohoy]] | [[Danao, Bohol|Danao]] | [[Dauis, Bohol|Dauis]] | [[Dimiao, Bohol|Dimiao]] | [[Duero, Bohol|Duero]] | [[Garcia Hernandez, Bohol|Garcia Hernandez]] | [[Guindulman, Bohol|Guindulman]] | [[Inabanga, Bohol|Inabanga]] | [[Jagna, Bohol|Jagna]] | [[Getafe, Bohol|Jetafe]] | [[Lila, Bohol|Lila]] | [[Loay, Bohol|Loay]] | [[Loboc, Bohol|Loboc]] | [[Loon, Bohol|Loon]] | [[Mabini, Bohol|Mabini]] | [[Maribojoc, Bohol|Maribojoc]] | [[Panglao, Bohol|Panglao]] | [[Pilar, Bohol|Pilar]] | [[President Carlos P. Garcia, Bohol|President Carlos P. Garcia]] | [[Sagbayan, Bohol|Sagbayan]] | [[San Isidro, Bohol|San Isidro]] | [[San Miguel, Bohol|San Miguel]] | [[Sevilla, Bohol|Sevilla]] | [[Sierra Bullones, Bohol|Sierra Bullones]] | [[Sikatuna, Bohol|Sikatuna]] | [[Talibon, Bohol|Talibon]] | [[Trinidad, Bohol|Trinidad]] | [[Tubigon, Bohol|Tubigon]] | [[Ubay, Bohol|Ubay]] | [[Valencia, Bohol|Valencia]] 
-|}
-</div>
+{{Navbox
+|name  = Bohol
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Bohol]]
+|image = 
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Alburquerque, Bohol|Alburquerque]]
+* [[Alicia, Bohol|Alicia]]
+* [[Anda, Bohol|Anda]]
+* [[Antequera, Bohol|Antequera]]
+* [[Baclayon, Bohol|Baclayon]]
+* [[Balilihan, Bohol|Balilihan]]
+* [[Batuan, Bohol|Batuan]]
+* [[Bien Unido, Bohol|Bien Unido]]
+* [[Bilar, Bohol|Bilar]]
+* [[Buenavista, Bohol|Buenavista]]
+* [[Calape, Bohol|Calape]]
+* [[Candijay, Bohol|Candijay]]
+* [[Carmen, Bohol|Carmen]]
+* [[Catigbian, Bohol|Catigbian]]
+* [[Clarin, Bohol|Clarin]]
+* [[Corella, Bohol|Corella]]
+* [[Cortes, Bohol|Cortes]]
+* [[Dagohoy, Bohol|Dagohoy]]
+* [[Danao, Bohol|Danao]]
+* [[Dauis, Bohol|Dauis]]
+* [[Dimiao, Bohol|Dimiao]]
+* [[Duero, Bohol|Duero]]
+* [[Garcia Hernandez, Bohol|Garcia Hernandez]]
+* [[Getafe, Bohol|Getafe]]
+* [[Guindulman, Bohol|Guindulman]]
+* [[Inabanga, Bohol|Inabanga]]
+* [[Jagna, Bohol|Jagna]]
+* [[Lila, Bohol|Lila]]
+* [[Loay, Bohol|Loay]]
+* [[Loboc, Bohol|Loboc]]
+* [[Loon, Bohol|Loon]]
+* [[Mabini, Bohol|Mabini]]
+* [[Maribojoc, Bohol|Maribojoc]]
+* [[Panglao, Bohol|Panglao]]
+* [[Pilar, Bohol|Pilar]]
+* [[President Carlos P. Garcia, Bohol|President Carlos P. Garcia]]
+* [[Sagbayan, Bohol|Sagbayan]]
+* [[San Isidro, Bohol|San Isidro]]
+* [[San Miguel, Bohol|San Miguel]]
+* [[Sevilla, Bohol|Sevilla]]
+* [[Sierra Bullones, Bohol|Sierra Bullones]]
+* [[Sikatuna, Bohol|Sikatuna]]
+* [[Talibon, Bohol|Talibon]]
+* [[Trinidad, Bohol|Trinidad]]
+* [[Tubigon, Bohol|Tubigon]]
+* [[Ubay, Bohol|Ubay]]
+* [[Valencia, Bohol|Valencia]]
+|group2 = Siyudad
+|list2 = 
+* [[Tagbilaran]]
+
+}}<noinclude>
+[[Category:Saray baley na Bohol| ]]
+</noinclude>
