--- a/Template:Bulacan.mw
+++ b/Template:Bulacan.mw
@@ -1,14 +1,37 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | ''' Saray [[Siyudad]] tan [[Baley]] ed [[Bulacan|Bulakan]] (Bulacan)'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Malolos]] | [[Meycauayan]] | [[San José Del Monte]] 
-|-
-|style="padding:0px 5px" align="right"|'''Baley:''' 
-|style="padding:0px 5px" | [[Angat, Filipinas|Angat]] | [[Balagtas (Bulacan)|Balagtas]] | [[Baliwag]] | [[Bocaue|Bukawe]] | [[Bulakan (baley)|Bulakan]] | [[Bustos]] | [[Doña Remedios Trinidad, Bulacan|Doña Remedios Trinidad]] | [[Guiguinto, Bulacan|Guiguinto]] | [[Hagonoy (Bulakan)|Hagonoy]] | [[Kalumpit]] | [[Marilao]] | [[Norzagaray]] | [[Obando]] | [[Pandi, Filipinas|Pandi]] | [[Paombōng]] | [[Plaridel (Bulakan)|Plaridel]] | [[Pulilán]] | [[San Ildefonso, Filipinas|San Ildefonso]] | [[San Muigel Mayumo|San Muigel]] | [[San Rafaél (Bulakan)|San Rafael]] | [[Santa María (Bulacan)|Santa María]] 
-|}
-</div>
-<noinclude>
+{{Navbox
+|name = Bulacan
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Bulacan]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Angat, Bulacan|Angat]]
+* [[Balagtas, Bulacan|Balagtas]]
+* [[Baliuag, Bulacan|Baliuag]]
+* [[Bocaue, Bulacan|Bocaue]]
+* [[Bulakan]]
+* [[Bustos, Bulacan|Bustos]]
+* [[Calumpit, Bulacan|Calumpit]]
+* [[Doña Remedios Trinidad, Bulacan|Doña Remedios Trinidad]]
+* [[Guiguinto, Bulacan|Guiguinto]]
+* [[Hagonoy, Bulacan|Hagonoy]]
+* [[Marilao, Bulacan|Marilao]]
+* [[Norzagaray, Bulacan|Norzagaray]]
+* [[Obando, Bulacan|Obando]]
+* [[Pandi, Bulacan|Pandi]]
+* [[Paombong, Bulacan|Paombong]]
+* [[Plaridel, Bulacan|Plaridel]]
+* [[Pulilan, Bulacan|Pulilan]]
+* [[San Ildefonso, Bulacan|San Ildefonso]]
+* [[San Miguel, Bulacan|San Miguel]]
+* [[San Rafael, Bulacan|San Rafael]]
+* [[Santa Maria, Bulacan|Santa Maria]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Malolos]]
+* [[Meycauayan]]
+* [[San Jose del Monte]]
+
+}}<noinclude>
+[[Category:Saray baley na Bulacan| ]]
 </noinclude>
