--- a/Template:Camarines_Norte.mw
+++ b/Template:Camarines_Norte.mw
@@ -1,8 +1,22 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray baley na Filipinas|baley]] na [[Camarines Norte|Camarines ed Baybay]] (Camarines Norte)'''
-|-
-|style="padding:0px 5px"; align="center"| [[Basud]] | [[Daet]] | [[José Panganiban (Camarines Norte)|José Panganiban]] | [[Kapalonga]] | [[Labo, Filipinas|Labo]] | [[Mercedez, Filipinas|Mercedez]] | [[Paracale]] | [[Imelda (Bikol)|San Lorenzo Ruiz]] | [[San Vicente (Bikol)|San Vicente]] | [[Santa Elena (Bikol)|Santa Elena]] | [[Talisay (Bikol)|Talisay]] | [[Vinzons]]
-|}
-</div>
+{{Navbox
+|name = Camarines Norte
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Camarines Norte]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Basud, Camarines Norte|Basud]]
+* [[Capalonga, Camarines Norte|Capalonga]]
+* [[Daet, Camarines Norte|Daet]]
+* [[Jose Panganiban, Camarines Norte|Jose Panganiban]]
+* [[Labo, Camarines Norte|Labo]]
+* [[Mercedes, Camarines Norte|Mercedes]]
+* [[Paracale, Camarines Norte|Paracale]]
+* [[San Lorenzo Ruiz, Camarines Norte|San Lorenzo Ruiz]]
+* [[San Vicente, Camarines Norte|San Vicente]]
+* [[Santa Elena, Camarines Norte|Santa Elena]]
+* [[Talisay, Camarines Norte|Talisay]]
+* [[Vinzons, Camarines Norte|Vinzons]]
+}}<noinclude>
+[[Category:Saray baley na Camarines Norte| ]]
+</noinclude>
