--- a/Template:Camarines_Sur.mw
+++ b/Template:Camarines_Sur.mw
@@ -1,12 +1,49 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| class="toccolours" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray baley tan siyudad ed [[Camarines Sur|Camarines ed Abalaten]] (Camarines Sur)'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray siyudad:''' 
-|style="padding:0px 5px" | [[Iriga]] | [[Naga, Camarines Sur|Naga]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Baao, Camarines Sur|Baao]] | [[Balatan, Camarines Sur|Balatan]] | [[Bato, Camarines Sur|Bato]] | [[Bombon, Camarines Sur|Bombon]] | [[Buhi, Camarines Sur|Buhi]] | [[Bula, Camarines Sur|Bula]] | [[Cabusao, Camarines Sur|Cabusao]] | [[Calabanga, Camarines Sur|Calabanga]] | [[Camaligan, Camarines Sur|Camaligan]] | [[Canaman, Camarines Sur|Canaman]] | [[Caramoan, Camarines Sur|Caramoan]] | [[Del Gallego, Camarines Sur|Del Gallego]] | [[Gainza, Camarines Sur|Gainza]] | [[Garchitorena, Camarines Sur|Garchitorena]] | [[Goa, Camarines Sur|Goa]] | [[Lagonoy, Camarines Sur|Lagonoy]] | [[Libmanan, Camarines Sur|Libmanan]]&nbsp;| [[Lupi, Camarines Sur|Lupi]] | [[Magarao, Camarines Sur|Magarao]] | [[Milaor, Camarines Sur|Milaor]] | [[Minalabac, Camarines Sur|Minalabac]] | [[Nabua, Camarines Sur|Nabua]] | [[Ocampo, Camarines Sur|Ocampo]] | [[Pamplona, Camarines Sur|Pamplona]] | [[Pasacao, Camarines Sur|Pasacao]] | [[Pili, Camarines Sur|Pili]] | [[Presentacion, Camarines Sur|Presentacion]] | [[Ragay, Camarines Sur|Ragay]] | [[Sagñay, Camarines Sur|Sagñay]] | [[San Fernando, Camarines Sur|San Fernando]] | [[San Jose, Camarines Sur|San Jose]] | [[Sipocot, Camarines Sur|Sipocot]] | [[Siruma, Camarines Sur|Siruma]] | [[Tigaon, Camarines Sur|Tigaon]] | [[Tinambac, Camarines Sur|Tinambac]]
-|}
-</div>
+{{Navbox
+|name  = Camarines Sur
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Camarines Sur]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Baao, Camarines Sur|Baao]]
+* [[Balatan, Camarines Sur|Balatan]]
+* [[Bato, Camarines Sur|Bato]]
+* [[Bombon, Camarines Sur|Bombon]]
+* [[Buhi, Camarines Sur|Buhi]]
+* [[Bula, Camarines Sur|Bula]]
+* [[Cabusao, Camarines Sur|Cabusao]]
+* [[Calabanga, Camarines Sur|Calabanga]]
+* [[Camaligan, Camarines Sur|Camaligan]]
+* [[Canaman, Camarines Sur|Canaman]]
+* [[Caramoan, Camarines Sur|Caramoan]]
+* [[Del Gallego, Camarines Sur|Del Gallego]]
+* [[Gainza, Camarines Sur|Gainza]]
+* [[Garchitorena, Camarines Sur|Garchitorena]]
+* [[Goa, Camarines Sur|Goa]]
+* [[Lagonoy, Camarines Sur|Lagonoy]]
+* [[Libmanan, Camarines Sur|Libmanan]]
+* [[Lupi, Camarines Sur|Lupi]]
+* [[Magarao, Camarines Sur|Magarao]]
+* [[Milaor, Camarines Sur|Milaor]]
+* [[Minalabac, Camarines Sur|Minalabac]]
+* [[Nabua, Camarines Sur|Nabua]]
+* [[Ocampo, Camarines Sur|Ocampo]]
+* [[Pamplona, Camarines Sur|Pamplona]]
+* [[Pasacao, Camarines Sur|Pasacao]]
+* [[Pili, Camarines Sur|Pili]]
+* [[Presentacion, Camarines Sur|Presentacion]]
+* [[Ragay, Camarines Sur|Ragay]]
+* [[Sagñay, Camarines Sur|Sagñay]]
+* [[San Fernando, Camarines Sur|San Fernando]]
+* [[San Jose, Camarines Sur|San Jose]]
+* [[Sipocot, Camarines Sur|Sipocot]]
+* [[Siruma, Camarines Sur|Siruma]]
+* [[Tigaon, Camarines Sur|Tigaon]]
+* [[Tinambac, Camarines Sur|Tinambac]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Iriga]]
+* [[Naga, Camarines Sur|Naga]] 
+}}<noinclude>
+[[Category:Saray baley na Camarines Sur| ]]
+</noinclude>
