--- a/Template:Catanduanes.mw
+++ b/Template:Catanduanes.mw
@@ -1,8 +1,21 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Baley]] na [[Catanduanes]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Bagamanoc, Catanduanes|Bagamanoc]] | [[Baras, Catanduanes|Baras]] | [[Bato, Catanduanes|Bato]] | [[Caramoran, Catanduanes|Caramoran]] | [[Gigmoto, Catanduanes|Gigmoto]] | [[Pandan, Catanduanes|Pandan]] | [[Panganiban, Catanduanes|Panganiban]] | [[San Andres, Catanduanes|San&nbsp;Andres]]&nbsp;| [[San Miguel, Catanduanes|San Miguel]] | [[Viga, Catanduanes|Viga]] | [[Virac, Catanduanes|Virac]] 
-|}
-</div>
+{{Navbox
+|name = Catanduanes
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Catanduanes]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Bagamanoc, Catanduanes|Bagamanoc]]
+* [[Baras, Catanduanes|Baras]]
+* [[Bato, Catanduanes|Bato]]
+* [[Caramoran, Catanduanes|Caramoran]]
+* [[Gigmoto, Catanduanes|Gigmoto]]
+* [[Pandan, Catanduanes|Pandan]]
+* [[Panganiban, Catanduanes|Panganiban]]
+* [[San Andres, Catanduanes|San Andres]]
+* [[San Miguel, Catanduanes|San Miguel]]
+* [[Viga, Catanduanes|Viga]]
+* [[Virac, Catanduanes|Virac]]
+}}<noinclude>
+[[Category:Saray baley na Catanduanes| ]]
+</noinclude>
