--- a/Template:Cebu.mw
+++ b/Template:Cebu.mw
@@ -1,17 +1,65 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| class="toccolours" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[siyudad]] tan [[baley]] na [[Cebu]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Dakkel ya urbano na Siyudad:''' 
-|style="padding:0px 5px" | [[Cebú (siyudad)|Cebú]] | [[Lapu-Lapu, Filipinas|Lapu-Lapu]] | [[Mandaue]] 
-|-
-|style="padding:0px 5px" align="right"|'''Komponente na Siyudad:''' 
-|style="padding:0px 5px" | [[Bōgō (Cebú)|Bōgō]] | [[Cárcar, Filipinas|Cárcar]] | [[Danao (siyudad)|Danao]] | [[Naga (Visayas)|Naga]] | [[Talisay (Cebú)|Talisay]] | [[Toledo (Cebú)|Toledo]]
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Alcantara (Cebú)|Alcantara]] | [[Alcoy (Cebú)|Alcoy]] | [[Alegría (Visayas)|Alegría]] | [[Aloguinsan]] | [[Argao]] | [[Asturias (Cebú)|Asturias]] | [[Badian]] | [[Balambán]] | [[Bantayan (Cebú)|Bantayan]] | [[Barili]] | [[Boljoón]] | [[Borbón, Filipinas|Borbon]] | [[Catmon (Cebú)|Catmon]] | [[Consolación (Cebú)|Consolación]] | [[Córdoba, Filipinas|Córdoba]] | [[Daambantayan]] | [[Dalaquete]] | [[Dumanjug]] | [[Ginatilan]] | Karmen ([[Carmen, Cebu|Carmen]]) | [[Kompostela (Visayas)|Kompostela]] | [[Lilo-an (Cebú)|Lilo-an]] | [[Madridehos (Cebú)|Madridehos]] | [[Malabuyok]] | [[Medellin, Filipinas|Medellin]] | [[Minglanilya]] | [[Moalboal]] | [[Oslob]] | [[Pilar (Cebú)|Pilar]] | [[Pinamungajan]] | [[Poro]] | [[Ronda (baley)|Ronda]] | [[Samboan]] | [[San Fernándo (Cebú)|San Fernándo]] | [[San Francisco (Cebú)|San Francisco]] | [[San Remigio (Cebú)|San Remigio]] | [[Saint Faye (Cebú)|Santa Fe]] | [[Santander, Filipinas|Santander]] | [[Sibongâ]] | [[Sogod (Cebú)|Sogod]] | [[Tabogon]] | [[Tabuelan]] | [[Tuburan (Cebú)|Tuburan]] | [[Tudela (Cebú)|Tudela]]
-|}
-</div>
-<noinclude>
+{{Navbox
+|name  = Cebu
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Cebu]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Alcantara, Cebu|Alcantara]]
+* [[Alcoy, Cebu|Alcoy]]
+* [[Alegria, Cebu|Alegria]]
+* [[Aloguinsan, Cebu|Aloguinsan]]
+* [[Argao, Cebu|Argao]]
+* [[Asturias, Cebu|Asturias]]
+* [[Badian, Cebu|Badian]]
+* [[Balamban]]
+* [[Bantayan, Cebu|Bantayan]]
+* [[Barili, Cebu|Barili]]
+* [[Boljoon, Cebu|Boljoon]]
+* [[Borbon, Cebu|Borbon]]
+* [[Carmen, Cebu|Carmen]] 
+* [[Catmon, Cebu|Catmon]]
+* [[Compostela, Cebu|Compostela]]
+* [[Consolacion, Cebu|Consolacion]]
+* [[Cordova, Cebu|Cordova]]
+* [[Daanbantayan]]
+* [[Dalaguete, Cebu|Dalaguete]]
+* [[Dumanjug, Cebu|Dumanjug]]
+* [[Ginatilan, Cebu|Ginatilan]]
+* [[Liloan, Cebu|Liloan]]
+* [[Madridejos, Cebu|Madridejos]]
+* [[Malabuyoc, Cebu|Malabuyoc]]
+* [[Medellin, Cebu|Medellin]]
+* [[Minglanilla, Cebu|Minglanilla]]
+* [[Moalboal, Cebu|Moalboal]]
+* [[Oslob, Cebu|Oslob]]
+* [[Pilar, Cebu|Pilar]]
+* [[Pinamungajan]]
+* [[Poro, Cebu|Poro]]
+* [[Ronda, Cebu|Ronda]]
+* [[Samboan, Cebu|Samboan]]
+* [[San Fernando, Cebu|San Fernando]]
+* [[San Francisco, Cebu|San Francisco]]
+* [[San Remigio, Cebu|San Remigio]]
+* [[Santa Fe, Cebu|Santa Fe]]
+* [[Santander, Cebu|Santander]]
+* [[Sibonga, Cebu|Sibonga]]
+* [[Sogod, Cebu|Sogod]]
+* [[Tabogon, Cebu|Tabogon]]
+* [[Tabuelan, Cebu|Tabuelan]]
+* [[Tuburan, Cebu|Tuburan]]
+* [[Tudela, Cebu|Tudela]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Bogo]]
+* [[Carcar]]
+* [[Danao]]
+* [[Naga, Cebu|Naga]]
+* [[Talisay, Cebu|Talisay]]
+* [[Toledo, Cebu|Toledo]]
+* [[Siyudad na Cebu]]
+* [[Siyudad na Lapu-Lapu|Lapu-Lapu]]
+* [[Mandaue]]
+}}<noinclude>
+[[Category:Saray baley na Cebu| ]]
 </noinclude>
