--- a/Template:Guimaras.mw
+++ b/Template:Guimaras.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Guimaras
-|title = Saray [[Baley na Filipinas|Baley]] na [[Guimaras|Guimaras]]
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Guimaras|Guimaras]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -11,3 +11,5 @@
 * [[San Lorenzo, Guimaras|San Lorenzo]]
 * [[Sibunag, Guimaras|Sibunag]] 
 }}<noinclude>
+[[Category:Saray baley na Guimaras| ]]
+</noinclude>
