--- a/Template:Iloilo.mw
+++ b/Template:Iloilo.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Iloilo
-|title = Saray [[siyudad na Filipinas|siyudad]] tan [[baley na Filipinas|baley]] na [[Iloilo]]
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Iloilo]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -52,3 +52,5 @@
 * [[Siyudad na Iloilo|Iloilo]] 
 * [[Passi]]
 }}<noinclude>
+[[Category:Saray baley na Iloilo| ]]
+</noinclude>
