--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Isabela
-|title = Saray [[Saray siyudad na Filipinas|Siyudad]] san [[Saray baley na Filipinas|Baley]] na [[Isabela|Isabela]]
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na na [[Isabela|Isabela]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -44,4 +44,6 @@
 * [[Cauayan]]
 * [[Ilagan, Isabela|Ilagan]]
 * [[Santiago, Isabela|Santiago]]
-}}
+}}<noinclude>
+[[Category:Saray baley na Isabela| ]]
+</noinclude>
