--- a/Template:Kalinga.mw
+++ b/Template:Kalinga.mw
@@ -17,5 +17,5 @@
 * [[Tabuk, Kalinga|Tabuk]]
 
 }}<noinclude>
-[[Category:Saray baley na Leyte| ]]
+[[Category:Saray baley na Kalinga| ]]
 </noinclude>
