--- a/Template:La_Union.mw
+++ b/Template:La_Union.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = La Union
-|title = Saray [[Siyudad]] san [[Baley]] na [[La Union]]
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[La Union]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -29,3 +29,5 @@
 * [[San Fernando, La Union|San Fernando]]
 
 }}<noinclude>
+[[Category:Saray baley na La Union| ]]
+</noinclude>
