--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -1,12 +1,44 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad]] san [[Baley]] na [[Laguna (luyag)|Laguna]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Biñán|Biñán]] | [[Cabuyao, Laguna|Cabuyao]] | [[Siyudad na Kalamba|Kalamba]] | [[Siyudad na San Pablo|San Pablo]] | [[Siyudad na Santa Rosa|Santa Rosa]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Alaminos, Laguna|Alaminos]] | [[Bay, Laguna|Bay]] | [[Calauan, Laguna|Calauan]] |  [[Cavinti, Laguna|Cavinti]] | [[Famy, Laguna|Famy]] | [[Kalayaan, Laguna|Kalayaan]] | [[Liliw, Laguna|Liliw]] | [[Los Baños, Laguna|Los Baños]] | [[Luisiana, Laguna|Luisiana]] | [[Lumban, Laguna|Lumban]] | [[Mabitac, Laguna|Mabitac]] | [[Magdalena, Laguna|Magdalena]] | [[Majayjay, Laguna|Majayjay]] | [[Nagcarlan, Laguna|Nagcarlan]] | [[Paete, Laguna|Paete]] | [[Pagsanjan, Laguna|Pagsanjan]] | [[Pakil, Laguna|Pakil]] | [[Pangil, Laguna|Pangil]] | [[Pila, Laguna|Pila]] | [[Rizal, Laguna|Rizal]] | [[San Pedro, Laguna|San Pedro]] | [[Santa Kruz, Laguna|Santa Kruz]] | [[Santa Maria, Laguna|Santa Maria]] | [[Siniloan, Laguna|Siniloan]] | [[Victoria, Laguna|Victoria]]
-|}
-</div>
+{{Navbox
+|name = Laguna
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Laguna]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|image = 
+|group1 = Saray baley
+|list1 = 
+* [[Alaminos, Laguna|Alaminos]]
+* [[Bay, Laguna|Bay]]
+* [[Calauan, Laguna|Calauan]]
+* [[Cavinti, Laguna|Cavinti]]
+* [[Famy, Laguna|Famy]]
+* [[Kalayaan, Laguna|Kalayaan]]
+* [[Liliw, Laguna|Liliw]]
+* [[Los Baños, Laguna|Los Baños]]
+* [[Luisiana, Laguna|Luisiana]]
+* [[Lumban, Laguna|Lumban]]
+* [[Mabitac, Laguna|Mabitac]]
+* [[Magdalena, Laguna|Magdalena]]
+* [[Majayjay, Laguna|Majayjay]]
+* [[Nagcarlan, Laguna|Nagcarlan]]
+* [[Paete, Laguna|Paete]]
+* [[Pagsanjan, Laguna|Pagsanjan]]
+* [[Pakil, Laguna|Pakil]]
+* [[Pangil, Laguna|Pangil]]
+* [[Pila, Laguna|Pila]]
+* [[Rizal, Laguna|Rizal]]
+* [[Santa Cruz, Laguna|Santa Cruz]]
+* [[Santa Maria, Laguna|Santa Maria]]
+* [[Siniloan, Laguna|Siniloan]]
+* [[Victoria, Laguna|Victoria]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Biñan]]
+* [[Cabuyao]]
+* [[Calamba, Laguna|Calamba]]
+* [[San Pablo, Laguna|San Pablo]]
+* [[San Pedro, Laguna|San Pedro]]
+* [[Santa Rosa, Laguna|Santa Rosa]]
+
+}}<noinclude>
+[[Category:Saray baley na Laguna| ]]
+</noinclude>
