--- a/Template:Marinduque.mw
+++ b/Template:Marinduque.mw
@@ -1,7 +1,7 @@
 {{Navbox
 |name = Marinduque
 |image = 
-|title = Saray [[Baley]] na [[Marinduque]]
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Marinduque]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
