--- a/Template:Marinduque.mw
+++ b/Template:Marinduque.mw
@@ -13,3 +13,5 @@
 * [[Santa Cruz, Marinduque|Santa Cruz]]
 * [[Torrijos, Marinduque|Torrijos]]
 }}<noinclude>
+[[Category:Saray baley na Marinduque| ]]
+</noinclude>
