--- a/Template:Masbate.mw
+++ b/Template:Masbate.mw
@@ -1,12 +1,34 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray Siyudad na Filipinas|Siyudad]] san [[Saray Baley na Filipinas|Baley]] na [[Masbate|Masbate]]'''
-|-
-|style="padding:0px 5px" align="right"|'''Siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Masbate|Masbate]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray Baley:''' 
-|style="padding:0px 5px" | [[Aroroy, Masbate|Aroroy]] | [[Baleno, Masbate|Baleno]] | [[Balud, Masbate|Balud]] | [[Batuan, Masbate|Batuan]] | [[Cataingan, Masbate|Cataingan]] | [[Cawayan, Masbate|Cawayan]] | [[Claveria, Masbate|Claveria]] | [[Dimasalang, Masbate|Dimasalang]] | [[Esperanza, Masbate|Esperanza]] | [[Mandaon, Masbate|Mandaon]] | [[Milagros, Masbate|Milagros]] | [[Mobo, Masbate|Mobo]] | [[Monreal, Masbate|Monreal]] | [[Palanas, Masbate|Palanas]] | [[Pio V. Corpuz, Masbate|Pio V. Corpuz]] | [[Placer, Masbate|Placer]] | [[San Fernando, Masbate|San Fernando]] | [[San Jacinto, Masbate|San Jacinto]] | [[San Pascual, Masbate|San Pascual]] | [[Uson, Masbate|Uson]] 
-|}
-</div>
+{{Navbox
+|name = Masbate
+|image = 
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Masbate]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Aroroy, Masbate|Aroroy]]
+* [[Baleno, Masbate|Baleno]]
+* [[Balud, Masbate|Balud]]
+* [[Batuan, Masbate|Batuan]]
+* [[Cataingan, Masbate|Cataingan]]
+* [[Cawayan, Masbate|Cawayan]]
+* [[Claveria, Masbate|Claveria]]
+* [[Dimasalang, Masbate|Dimasalang]]
+* [[Esperanza, Masbate|Esperanza]]
+* [[Mandaon, Masbate|Mandaon]]
+* [[Milagros, Masbate|Milagros]]
+* [[Mobo, Masbate|Mobo]]
+* [[Monreal, Masbate|Monreal]]
+* [[Palanas, Masbate|Palanas]]
+* [[Pio V. Corpuz, Masbate|Pio V. Corpuz]]
+* [[Placer, Masbate|Placer]]
+* [[San Fernando, Masbate|San Fernando]]
+* [[San Jacinto, Masbate|San Jacinto]]
+* [[San Pascual, Masbate|San Pascual]]
+* [[Uson, Masbate|Uson]]
+|group2 = Siyudad
+|list2 = 
+* [[Siyudad na Masbate]]
+}}<noinclude>
+[[Category:Saray baley na Masbate| ]]
+</noinclude>
