--- a/Template:Mountain_Province.mw
+++ b/Template:Mountain_Province.mw
@@ -1,8 +1,21 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Baley]] na [[Luyag na Palandey]] ([[Luyag na Palandey|Mountain Province)]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Barlig, Luyag na Palandey|Barlig]] | [[Bauko, Luyag na Palandey|Bauko]] | [[Besao, Luyag na Palandey|Besao]] | [[Bontoc, Luyag na Palandey|Bontoc]] | [[Natonin, Luyag na Palandey|Natonin]] | [[Paracelis, Luyag na Palandey|Paracelis]] | [[Sabangan, Luyag na Palandey|Sabangan]] | [[Sadanga, Luyag na Palandey|Sadanga]] | [[Sagada, Luyag na Palandey|Sagada]] | [[Tadian, Luyag na Palandey|Tadian]] 
-|}
-</div>
+{{Navbox
+|name = Mountain Province
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Mountain Province]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Barlig, Mountain Province|Barlig]]
+* [[Bauko, Mountain Province|Bauko]]
+* [[Besao, Mountain Province|Besao]]
+* [[Bontoc, Mountain Province|Bontoc]]
+* [[Natonin, Mountain Province|Natonin]]
+* [[Paracelis, Mountain Province|Paracelis]]
+* [[Sabangan, Mountain Province|Sabangan]]
+* [[Sadanga, Mountain Province|Sadanga]]
+* [[Sagada, Mountain Province|Sagada]]
+* [[Tadian, Mountain Province|Tadian]]
+
+}}<noinclude>
+[[Category:Saray baley na Leyte| ]]
+</noinclude>
