--- a/Template:Mountain_Province.mw
+++ b/Template:Mountain_Province.mw
@@ -17,5 +17,5 @@
 * [[Tadian, Mountain Province|Tadian]]
 
 }}<noinclude>
-[[Category:Saray baley na Leyte| ]]
+[[Category:Saray baley na Mountain Province| ]]
 </noinclude>
