--- a/Template:Negros_Occidental.mw
+++ b/Template:Negros_Occidental.mw
@@ -1,12 +1,44 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Siyudad na Filipinas|Siyudad]] tan [[Baley na Filipinas|Baley]] na [[Negros ed Sagor]] ([[Negros ed Sagor|Negros Occidental]])'''
-|-
-|style="padding:0px 5px" align="right"|'''Saray siyudad:''' 
-|style="padding:0px 5px" | [[Siyudad na Bacolod|Bacolod]] | [[Siyudad na Bago|Bago]] | [[Siyudad na Cadiz| Cadiz]] | [[Siyudad na Escalante|Escalante]] | [[Siyudad na Himamaylan|Himamaylan]] | [[Siyudad na Kabankalan|Kabankalan]] | [[Siyudad na La Carlota|La Carlota]] | [[Siyudad na Sagay|Sagay]] | [[Siyudad na San Carlos, Negros Occidental|San Carlos]] | [[Siyudad na Silay|Silay]] | [[Siyudad na Sipalay|Sipalay]] | [[Siyudad na Talisay, Negros Occidental|Talisay]] | [[Siyudad na Victorias|Victorias]] 
-|-
-|style="padding:0px 5px" align="right"|'''Saray baley:''' 
-|style="padding:0px 5px" | [[Binalbagan, Negros Occidental|Binalbagan]] | [[Calatrava, Negros Occidental|Calatrava]] | [[Candoni, Negros Occidental|Candoni]] | [[Cauayan, Negros Occidental|Cauayan]] | [[Enrique B. Magalona, Negros Occidental|Enrique B. Magalona]] | [[Hinigaran, Negros Occidental|Hinigaran]] | [[Hinoba-an, Negros Occidental|Hinoba-an]] | [[Ilog, Negros Occidental|Ilog]] | [[Isabela, Negros Occidental|Isabela]] | [[La Castellana, Negros Occidental|La Castellana]] | [[Manapla, Negros Occidental|Manapla]] | [[Moises Padilla, Negros Occidental|Moises Padilla]] | [[Murcia, Negros Occidental|Murcia]] | [[Pontevedra, Negros Occidental|Pontevedra]] | [[Pulupandan, Negros Occidental|Pulupandan]] | [[Salvador Benedicto, Negros Occidental|Salvador Benedicto]] | [[San Enrique, Negros Occidental|San Enrique]] | [[Toboso, Negros Occidental|Toboso]] | [[Valladolid, Negros Occidental|Valladolid]] 
-|}
-</div>
+{{Navbox
+|name = Negros Occidental
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Negros Occidental]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Binalbagan, Negros Occidental|Binalbagan]]
+* [[Calatrava, Negros Occidental|Calatrava]]
+* [[Candoni, Negros Occidental|Candoni]]
+* [[Cauayan, Negros Occidental|Cauayan]]
+* [[Enrique B. Magalona, Negros Occidental|Enrique B. Magalona]]
+* [[Hinigaran, Negros Occidental|Hinigaran]]
+* [[Hinoba-an, Negros Occidental|Hinoba-an]]
+* [[Ilog, Negros Occidental|Ilog]]
+* [[Isabela, Negros Occidental|Isabela]]
+* [[La Castellana, Negros Occidental|La Castellana]]
+* [[Manapla, Negros Occidental|Manapla]]
+* [[Moises Padilla, Negros Occidental|Moises Padilla]]
+* [[Murcia, Negros Occidental|Murcia]]
+* [[Pontevedra, Negros Occidental|Pontevedra]]
+* [[Pulupandan, Negros Occidental|Pulupandan]]
+* [[Salvador Benedicto]]
+* [[San Enrique, Negros Occidental|San Enrique]]
+* [[Toboso, Negros Occidental|Toboso]]
+* [[Valladolid, Negros Occidental|Valladolid]]
+|group2 = Saray siyudad
+|list2 = 
+* [[Bago]]
+* [[Cadiz, Negros Occidental|Cadiz]]
+* [[Escalante]]
+* [[Himamaylan]]
+* [[Kabankalan]]
+* [[La Carlota]]
+* [[Sagay]]
+* [[San Carlos, Negros Occidental|San Carlos]]
+* [[Silay]]
+* [[Sipalay]]
+* [[Talisay, Negros Occidental|Talisay]]
+* [[Victorias]]
+* [[Bacolod]] 
+}}<noinclude>
+[[Category:Saray baley na Negros Occidental| ]]
+</noinclude>
