--- a/Template:Nueva_Vizcaya.mw
+++ b/Template:Nueva_Vizcaya.mw
@@ -1,6 +1,6 @@
 {{Navbox
-|name = Balon Vizcaya
-|title = Saray [[Saray Baley na Filipinas|Baley]] na [[Balon Vizcaya|Nueva Vizcaya]]
+|name = Nueva Vizcaya
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Nueva Vizcaya]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -21,4 +21,6 @@
 * [[Solano, Nueva Vizcaya|Solano]]
 * [[Villaverde, Nueva Vizcaya|Villaverde]]
 
-}}
+}}<noinclude>
+[[Category:Saray baley na Nueva Vizcaya| ]]
+</noinclude>
