--- a/Template:Pangasinan.mw
+++ b/Template:Pangasinan.mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name = Pangasinan
-|title = Saray [[Siyudad]] san [[Baley]] na [[Luyag na Pangasinan]]
+|title = Saray [[:Category:Saray siyudad na Filipinas|siyudad]] san [[:Category:Saray baley na Filipinas|baley]] na [[Pangasinan]]
 |state = {{{state|autocollapse}}}
 |listclass = hlist
 |group1 = Saray baley
@@ -56,3 +56,5 @@
 * [[San Carlos, Pangasinan|San Carlos]]
 * [[Urdaneta, Pangasinan|Urdaneta]]
 }}<noinclude>
+[[Category:Saray baley na Pangasinan| ]]
+</noinclude>
