--- a/Template:Quirino.mw
+++ b/Template:Quirino.mw
@@ -1,8 +1,17 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray [[Saray Baley na Filipinas|Baley]] na [[Quirino|Quirino]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Aglipay, Quirino|Aglipay]] | [[Cabarroguis, Quirino|Cabarroguis]] | [[Diffun, Quirino|Diffun]] | [[Maddela, Quirino|Maddela]] | [[Nagtipunan, Quirino|Nagtipunan]] | [[Saguday, Quirino|Saguday]] 
-|}
-</div>
+{{Navbox
+|name = Quirino
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Quirino]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Aglipay, Quirino|Aglipay]]
+* [[Cabarroguis, Quirino|Cabarroguis]]
+* [[Diffun, Quirino|Diffun]]
+* [[Maddela, Quirino|Maddela]]
+* [[Nagtipunan, Quirino|Nagtipunan]]
+* [[Saguday, Quirino|Saguday]]
+
+}}<noinclude>
+[[Category:Saray baley na Quirino| ]]
+</noinclude>
