--- a/Template:Sulu.mw
+++ b/Template:Sulu.mw
@@ -1,8 +1,29 @@
-<div style="text-align: center; clear:both; margin: 1.5em 0em">
-{| id="toc" style="margin: auto; line-height: 1.5; font-size: smaller; text-align: left;"
-|-
-| colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''Saray baley ed [[Sulu]]'''
-|-
-|style="padding:0px 5px"; align="center"| [[Banguingui, Sulu|Banguingui]] | [[Hadji Panglima Tahil, Sulu|Hadji Panglima Tahil]] | [[Indanan, Sulu|Indanan]] | [[Jolo, Sulu|Jolo]] | [[Kalingalan Caluang, Sulu|Kalingalan Caluang]] | [[Lugus, Sulu|Lugus]] | [[Luuk, Sulu|Luuk]] | [[Maimbung, Sulu|Maimbung]] | [[Old Panamao, Sulu|Old Panamao]] | [[Omar, Sulu|Omar]] | [[Pandami, Sulu|Pandami]] | [[Panglima Estino, Sulu|Panglima Estino]] | [[Pangutaran, Sulu|Pangutaran]] | [[Parang, Sulu|Parang]] | [[Pata, Sulu|Pata]] | [[Patikul, Sulu|Patikul]] | [[Siasi, Sulu|Siasi]] | [[Talipao, Sulu|Talipao]] | [[Tapul, Sulu|Tapul]]
-|}
-</div>
+{{Navbox
+|name = Sulu
+|title = Saray [[:Category:Saray baley na Filipinas|baley]] na [[Sulu]]
+|state = {{{state|autocollapse}}}
+|listclass = hlist
+|group1 = Saray baley
+|list1 = 
+* [[Banguingui, Sulu|Banguingui]]
+* [[Hadji Panglima Tahil, Sulu|Hadji Panglima Tahil]]
+* [[Indanan, Sulu|Indanan]]
+* [[Jolo, Sulu|Jolo]]
+* [[Kalingalan Caluang, Sulu|Kalingalan Caluang]]
+* [[Lugus, Sulu|Lugus]]
+* [[Luuk, Sulu|Luuk]]
+* [[Maimbung, Sulu|Maimbung]]
+* [[Old Panamao, Sulu|Old Panamao]]
+* [[Omar, Sulu|Omar]]
+* [[Pandami, Sulu|Pandami]]
+* [[Panglima Estino, Sulu|Panglima Estino]]
+* [[Pangutaran, Sulu|Pangutaran]]
+* [[Parang, Sulu|Parang]]
+* [[Pata, Sulu|Pata]]
+* [[Patikul, Sulu|Patikul]]
+* [[Siasi, Sulu|Siasi]]
+* [[Talipao, Sulu|Talipao]]
+* [[Tapul, Sulu|Tapul]]
+}}<noinclude>
+[[Category:Saray baley na Sulu| ]]
+</noinclude>
